Bug 1500710 - Add default MIME type definition for .wasm as 'application/wasm' r=bzbarsky

Add {"application/wasm", "wasm"} mapping in extraMimeEntries

Differential Revision: https://phabricator.services.mozilla.com/D18189