uriloader/exthandler/nsExternalHelperAppService.cpp
@@ -557,7 +557,8 @@ static const nsExtraMimeTypeEntry extraMimeEntries[] = {
     {AUDIO_WAV, "wav", "Waveform Audio"},
     {VIDEO_3GPP, "3gpp,3gp", "3GPP Video"},
     {VIDEO_3GPP2, "3g2", "3GPP2 Video"},
-    {AUDIO_MIDI, "mid", "Standard MIDI Audio"}};
+    {AUDIO_MIDI, "mid", "Standard MIDI Audio"},
+    {APPLICATION_WASM, "wasm", "WebAssembly Module"}};
 
 #undef MAC_TYPE
 
